# mcp-gateway

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  gateway.py  mcp_remote.py  pyproject.toml  requirements.txt  servers.txt  servers_simple.txt  session.py
client/: client.py  requirements.txt
examples/: README.md  example_client_http.py  example_client_mcp.py  requirements.txt
mcp_servers/: demo_server.py
scripts/: quick-start.sh
