[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-gateway"
version = "0.1.0"
description = "A routing proxy for agent traffic to MCP servers"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Placeholder Labs", email = "hello@placeholder-labs.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
keywords = ["mcp", "gateway", "proxy", "agent", "routing"]
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.9.1",
    "aiohttp-cors>=0.7.0",
    "redis>=5.0.1",
    "mcp>=0.1.0",
    "openai>=1.12.0",
    "pydantic>=2.5.3",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/placeholder-labs/mcp-gateway"
Repository = "https://github.com/placeholder-labs/mcp-gateway"
Issues = "https://github.com/placeholder-labs/mcp-gateway/issues"

[project.scripts]
mcp-gateway = "gateway:main"

[tool.setuptools.packages.find]
include = ["gateway*", "session*", "mcp_servers*", "client*"]

[tool.black]
line-length = 88
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true